--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -17878,6 +17878,34 @@ video {
   transition-delay: 1000ms;
 }
 
+/* Mega Menu Styles ---------------------------------------------------------------------------- */
+
+.mega-menu {
+  display: none;
+  left: 0;
+  position: absolute;
+  text-align: left;
+  width: 100%;
+}
+
+/* hoverable Class Styles */
+
+.hoverable {
+  position: static;
+}
+
+.hoverable > a:after {
+  content: "\25BC";
+  font-size: 10px;
+  padding-left: 6px;
+  position: relative;
+  top: -1px;
+}
+
+.hoverable:hover .mega-menu {
+  display: block;
+}
+
 @media (min-width: 640px) {
   .sm\:space-y-0 > :not(template) ~ :not(template) {
     --space-y-reverse: 0;
