Few 'main' layout improvements

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -209,30 +209,76 @@
         </nav><!-- /Navigation -->
 
         <!-- Banner -->
-        <div class="bg-teal-500">
+        <div class="container mx-auto">
             {{{ province }}}
         </div><!-- /Banner -->
 
         <!-- Content -->
-        <div class="grid grid-cols-3 gap-4">
+        <div class="container mx-auto grid grid-cols-3 gap-4">
             <div class="col-span-2">
                 {{{ body }}}
             </div>
             <div>
-                Instagram
+                <div class="md:flex bg-white rounded-lg p-6 shadow-lg m-4">
+                    <img class="h-16 w-16 md:h-24 md:w-24 rounded-full mx-auto md:mx-0 md:mr-6" src="/images/avatar.jpg">
+                    <div class="text-center md:text-left">
+                        <h2 class="text-lg">Евгений Lindford</h2>
+                        <div class="text-purple-500">Customer Support</div>
+                        <div class="text-gray-600">erinlindford@example.com</div>
+                        <div class="text-gray-600">+(33) 675 789 803 </div>
+                    </div>
+                </div>
+
+                <div class="md:flex bg-white rounded-lg p-6 shadow-lg m-4">
+                    <img class="h-16 w-16 md:h-24 md:w-24 rounded-full mx-auto md:mx-0 md:mr-6" src="/images/avatar.jpg">
+                    <div class="text-center md:text-left">
+                        <h2 class="text-lg">Дмитрий Lindford</h2>
+                        <div class="text-purple-500">Customer Support</div>
+                        <div class="text-gray-600">erinlindford@example.com</div>
+                        <div class="text-gray-600">+(33) 675 789 777</div>
+                    </div>
+                </div>
+
+                <div class="max-w-sm rounded-lg overflow-hidden shadow-lg m-4">
+                    <img class="w-full" src="/images/card-top.jpg" alt="Sunset in the mountains">
+                    <div class="px-6 py-4">
+                        <div class="font-bold text-xl mb-2">The Coldest Sunset</div>
+                        <p class="text-gray-700 text-base">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus quia, nulla! Maiores et perferendis eaque, exercitationem praesentium nihil.
+                        </p>
+                    </div>
+                    <div class="px-6 py-4">
+                        <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2">#photography</span>
+                        <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2">#travel</span>
+                        <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700">#winter</span>
+                    </div>
+                </div>
             </div>
         </div><!-- /Content -->
 
         <!-- Footer -->
-        <div class="grid grid-cols-3 gap-4">
+        <div class="container mx-auto bg-white grid grid-cols-3 gap-4">
             <div>
-                <h1>Телефоны</h1>
-                <p>+(33) 675789803 Евгений</p>
-                <p>+(33) 675789777 Дмитрий</p>
-                </h1>
+                <p>
+                    <a href="#">Новости</a>
+                </p>
+                <p>
+                    <a href="#">Обязательства</a>
+                </p>
+                <p>
+                    <a href="#">Лицензированный гид</a>
+                </p>
+                <p>
+                    <a href="#">Отзывы</a>
+                </p>
             </div>
             <div>
-                <h1>Адрес</h1>
+                <p>
+                    
+                </p>
+                <p>
+                    
+                </p>
                 <p>
                     SARL FRANCE ET MOI<br>
                     66 Avenue des Champs Élysées<br>
@@ -243,6 +289,9 @@
             <div>
                 <p>
                     <a href="#">Mentions légales</a>
+                </p>
+                <p>
+                    <a href="#">Контакты</a>
                 </p>
             </div>
         </div><!-- /Footer -->
