--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -1,1 +1,8 @@
 <h1>Contact</h1>
+
+<p>
+    SARL FRANCE ET MOI<br>
+    66 Avenue des Champs Élysées<br>
+    75008<br>
+    Paris FRANCE<br>
+</p>
