--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,7 +22,7 @@
 	
                         <!--Regular Link-->
                         <li class="hover:bg-blue-800 hover:text-white">
-                            <a href="#" class="relative block py-6 px-2 lg:p-6 text-sm lg:text-base font-bold">Домой</a>
+                            <a href="/" class="relative block py-6 px-2 lg:p-6 text-sm lg:text-base font-bold">Домой</a>
                         </li>
 		  
                         <!--Hoverable Link-->
@@ -43,41 +43,41 @@
                                             <div>
                                                 <ul>
                                                     <li>
-                                                        <a href="#" class="block p-1 hover:bg-blue-600 text-gray-300 hover:text-white text-sm">Аквитания</a>
+                                                        <a href="/aquitaine" class="block p-1 hover:bg-blue-600 text-gray-300 hover:text-white text-sm">Аквитания</a>
                                                     </li>
                                                     <li>
-                                                        <a href="#" class="block p-1 hover:bg-blue-600 text-gray-300 hover:text-white text-sm">Анжу, Пуату, Турень</a>
+                                                        <a href="/anjou-poitou-touraine" class="block p-1 hover:bg-blue-600 text-gray-300 hover:text-white text-sm">Анжу, Пуату, Турень</a>
                                                     </li>
                                                     <li>
-                                                        <a href="#" class="block p-1 hover:bg-blue-600 text-gray-300 hover:text-white text-sm">Бретань, Нормандия</a>
+                                                        <a href="/brittany-normandy" class="block p-1 hover:bg-blue-600 text-gray-300 hover:text-white text-sm">Бретань, Нормандия</a>
                                                     </li>
                                                     <li>
-                                                        <a href="#" class="block p-1 hover:bg-blue-600 text-gray-300 hover:text-white text-sm">Бургундия</a>
+                                                        <a href="/burgundy" class="block p-1 hover:bg-blue-600 text-gray-300 hover:text-white text-sm">Бургундия</a>
                                                     </li>
                                                     <li>
-                                                        <a href="#" class="block p-1 hover:bg-blue-600 text-gray-300 hover:text-white text-sm">Лион</a>
+                                                        <a href="/lyon" class="block p-1 hover:bg-blue-600 text-gray-300 hover:text-white text-sm">Лион</a>
                                                     </li>
                                                 </ul>
                                             </div>
                                             <div>
                                                 <ul>
                                                     <li>
-                                                        <a href="#" class="block p-1 hover:bg-blue-600 text-gray-300 hover:text-white text-sm">Нормандия</a>
+                                                        <a href="/normandy" class="block p-1 hover:bg-blue-600 text-gray-300 hover:text-white text-sm">Нормандия</a>
                                                     </li>
                                                     <li>
-                                                        <a href="#" class="block p-1 hover:bg-blue-600 text-gray-300 hover:text-white text-sm">Париж</a>
+                                                        <a href="/paris" class="block p-1 hover:bg-blue-600 text-gray-300 hover:text-white text-sm">Париж</a>
                                                     </li>
                                                     <li>
-                                                        <a href="#" class="block p-1 hover:bg-blue-600 text-gray-300 hover:text-white text-sm">Пикардия</a>
+                                                        <a href="/picardy" class="block p-1 hover:bg-blue-600 text-gray-300 hover:text-white text-sm">Пикардия</a>
                                                     </li>
                                                     <li>
-                                                        <a href="#" class="block p-1 hover:bg-blue-600 text-gray-300 hover:text-white text-sm">Сердце Франции</a>
+                                                        <a href="/heart-of-france" class="block p-1 hover:bg-blue-600 text-gray-300 hover:text-white text-sm">Сердце Франции</a>
                                                     </li>
                                                     <li>
-                                                        <a href="#" class="block p-1 hover:bg-blue-600 text-gray-300 hover:text-white text-sm">Эльзас</a>
+                                                        <a href="/alsace" class="block p-1 hover:bg-blue-600 text-gray-300 hover:text-white text-sm">Эльзас</a>
                                                     </li>
                                                     <li>
-                                                        <a href="#" class="block p-1 hover:bg-blue-600 text-gray-300 hover:text-white text-sm">Шампань</a>
+                                                        <a href="/champagne" class="block p-1 hover:bg-blue-600 text-gray-300 hover:text-white text-sm">Шампань</a>
                                                     </li>
                                                 </ul>
                                             </div>
@@ -95,19 +95,19 @@
                                         </div>
                                         <ul>
                                             <li>
-                                                <a href="#" class="block p-1 hover:bg-blue-600 text-gray-300 hover:text-white text-sm">Вкусная Франция</a>
+                                                <a href="/tasty-france" class="block p-1 hover:bg-blue-600 text-gray-300 hover:text-white text-sm">Вкусная Франция</a>
                                             </li>
                                             <li>
-                                                <a href="#" class="block p-1 hover:bg-blue-600 text-gray-300 hover:text-white text-sm">Винные туры</a>
+                                                <a href="/wine-tours" class="block p-1 hover:bg-blue-600 text-gray-300 hover:text-white text-sm">Винные туры</a>
                                             </li>
                                             <li>
-                                                <a href="#" class="block p-1 hover:bg-blue-600 text-gray-300 hover:text-white text-sm">Семейный отдых во Франции</a>
+                                                <a href="/family-holidays-in-france" class="block p-1 hover:bg-blue-600 text-gray-300 hover:text-white text-sm">Семейный отдых во Франции</a>
                                             </li>
                                             <li>
-                                                <a href="#" class="block p-1 hover:bg-blue-600 text-gray-300 hover:text-white text-sm">Замки Франции</a>
+                                                <a href="/castles-of-france" class="block p-1 hover:bg-blue-600 text-gray-300 hover:text-white text-sm">Замки Франции</a>
                                             </li>
                                             <li>
-                                                <a href="#" class="block p-1 hover:bg-blue-600 text-gray-300 hover:text-white text-sm">Франция для детей</a>
+                                                <a href="/france-for-children" class="block p-1 hover:bg-blue-600 text-gray-300 hover:text-white text-sm">Франция для детей</a>
                                             </li>
                                         </ul>
                                         <!-- p class="text-gray-100 text-sm">Prioritize these line items game-plan draw a line in the sand come up with something buzzworthy UX upstream selling.</p>
@@ -124,7 +124,7 @@
                                         <p class="text-gray-100 text-sm">This proposal is a win-win situation which will cause a stellar paradigm shift, let's touch base off-line before we fire the new ux experience.</p>
                                         <div class="flex items-center py-3">
                                             <i class="h-6 pr-3 fill-current text-blue-300 far fa-arrow-alt-circle-right fa-2x"></i>
-                                            <a href="#" class="text-white bold border-b-2 border-blue-300 hover:text-blue-300">Find out more...</a>
+                                            <a href="/transfers" class="text-white bold border-b-2 border-blue-300 hover:text-blue-300">Узнать больше...</a>
                                         </div>
                                     </ul>
                                     <ul class="px-4 w-full sm:w-1/2 lg:w-1/4 border-gray-600 pb-6 pt-6 lg:pt-3">
@@ -135,7 +135,7 @@
                                         <p class="text-gray-100 text-sm">This is a no-brainer to wash your face, or we need to future-proof this high performance keywords granularity.</p>
                                         <div class="flex items-center py-3">
                                             <i class="h-6 pr-3 fill-current text-blue-300 far fa-arrow-alt-circle-right fa-2x"></i>
-                                            <a href="#" class="text-white bold border-b-2 border-blue-300 hover:text-blue-300">Find out more...</a>
+                                            <a href="/price" class="text-white bold border-b-2 border-blue-300 hover:text-blue-300">Узнать больше...</a>
                                         </div>
                                     </ul>
                                 </div>
@@ -159,7 +159,7 @@
                                         <p class="text-gray-100 text-sm">Quarterly sales are at an all-time low create spaces to explore the accountable talk and blind vampires.</p>
                                         <div class="flex items-center py-3">
                                             <i class="h-6 pr-3 fill-current text-blue-300 far fa-arrow-alt-circle-right fa-2x"></i>
-                                            <a href="#" class="text-white bold border-b-2 border-blue-300 hover:text-blue-300">Find out more...</a>
+                                            <a href="/news" class="text-white bold border-b-2 border-blue-300 hover:text-blue-300">Узнать больше...</a>
                                         </div>
                                     </ul>
                                     <ul class="px-4 w-full sm:w-1/2 lg:w-1/4 border-gray-600 border-b sm:border-r-0 lg:border-r lg:border-b-0 pb-6 pt-6 lg:pt-3">
@@ -170,7 +170,7 @@
                                         <p class="text-gray-100 text-sm">Prioritize these line items game-plan draw a line in the sand come up with something buzzworthy UX upstream selling.</p>
                                         <div class="flex items-center py-3">
                                             <i class="h-6 pr-3 fill-current text-blue-300 far fa-arrow-alt-circle-right fa-2x"></i>
-                                            <a href="#" class="text-white bold border-b-2 border-blue-300 hover:text-blue-300">Find out more...</a>
+                                            <a href="/obligations" class="text-white bold border-b-2 border-blue-300 hover:text-blue-300">Узнать больше...</a>
                                         </div>
                                     </ul>
                                     <ul class="px-4 w-full sm:w-1/2 lg:w-1/4 border-gray-600 border-b sm:border-b-0 sm:border-r md:border-b-0 pb-6 pt-6 lg:pt-3">
@@ -181,7 +181,7 @@
                                         <p class="text-gray-100 text-sm">This proposal is a win-win situation which will cause a stellar paradigm shift, let's touch base off-line before we fire the new ux experience.</p>
                                         <div class="flex items-center py-3">
                                             <i class="h-6 pr-3 fill-current text-blue-300 far fa-arrow-alt-circle-right fa-2x"></i>
-                                            <a href="#" class="text-white bold border-b-2 border-blue-300 hover:text-blue-300">Find out more...</a>
+                                            <a href="/licensed-guide" class="text-white bold border-b-2 border-blue-300 hover:text-blue-300">Узнать больше...</a>
                                         </div>
                                     </ul>
                                     <ul class="px-4 w-full sm:w-1/2 lg:w-1/4 border-gray-600 pb-6 pt-6 lg:pt-3">
@@ -192,7 +192,7 @@
                                         <p class="text-gray-100 text-sm">This is a no-brainer to wash your face, or we need to future-proof this high performance keywords granularity.</p>
                                         <div class="flex items-center py-3">
                                             <i class="h-6 pr-3 fill-current text-blue-300 far fa-arrow-alt-circle-right fa-2x"></i>
-                                            <a href="#" class="text-white bold border-b-2 border-blue-300 hover:text-blue-300">Find out more...</a>
+                                            <a href="/reviews" class="text-white bold border-b-2 border-blue-300 hover:text-blue-300">Узнать больше...</a>
                                         </div>
                                     </ul>
                                 </div>
@@ -201,7 +201,7 @@
 
                         <!--Regular Link-->
                         <li class="hover:bg-blue-800 hover:text-white">
-                            <a href="#" class="relative block py-6 px-2 lg:p-6 text-sm lg:text-base font-bold">Контакты</a>
+                            <a href="/contact" class="relative block py-6 px-2 lg:p-6 text-sm lg:text-base font-bold">Контакты</a>
                         </li>
                     </ul>
                 </div>
@@ -260,39 +260,27 @@
         <div class="container mx-auto bg-white grid grid-cols-3 gap-4">
             <div>
                 <p>
-                    <a href="#">Новости</a>
+                    <a href="/news">Новости</a>
                 </p>
                 <p>
-                    <a href="#">Обязательства</a>
+                    <a href="/obligations">Обязательства</a>
                 </p>
                 <p>
-                    <a href="#">Лицензированный гид</a>
+                    <a href="/licensed-guide">Лицензированный гид</a>
                 </p>
                 <p>
-                    <a href="#">Отзывы</a>
+                    <a href="/reviews">Отзывы</a>
                 </p>
             </div>
             <div>
                 <p>
-                    
+                    <a href="/contact">Контакты</a>
                 </p>
                 <p>
-                    
-                </p>
-                <p>
-                    SARL FRANCE ET MOI<br>
-                    66 Avenue des Champs Élysées<br>
-                    75008<br>
-                    Paris FRANCE<br>
+                    <a href="/legal-notice">Mentions légales</a>
                 </p>
             </div>
             <div>
-                <p>
-                    <a href="#">Mentions légales</a>
-                </p>
-                <p>
-                    <a href="#">Контакты</a>
-                </p>
             </div>
         </div><!-- /Footer -->
 
